# yoroi

./: .cursor.json  .gitignore  .tool-versions  FEATURE_RESTORATION_GUIDE.md  MIGRATION_GUIDELINES.md  README.md  build-packages.sh  codecov.yml  crowdin-wallet-mobile.yml  metro.config.js  package-lock.json  package.json  sonar-project.properties  yoroi.code-workspace
.cursor/: DEVELOPMENT_GUIDE.md  conflicts.md  migration-guidelines.md  migration-status-complete.md
.cursor/mdc/: github.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: nightly.yml  pr-author.yml  sonarqube.yml  wallet-mobile-checks.yml
apps/mobile/: .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  App.tsx  Dev.tsx  DevMenu.tsx  PlatformShell.tsx  PlatformShell.web.tsx  ampli.json  app.config.js  babel.config.js  index.ts  jest.config.js  jest.setup.js  markdown-transformer.js  metro.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
apps/mobile/.expo/: devices.json
apps/mobile/__mocks__/: expo-localization.js
apps/mobile/__mocks__/@emurgo/: csl-mobile-bridge-jsi.js
apps/mobile/cpp/: AppTurboModuleProvider.cpp  AppTurboModuleProvider.h  AppTurboModuleProvider.podspec
apps/mobile/plugins/: with-app-turbo-module-provider.js
apps/mobile/plugins/android_jni/: CMakeLists.txt  OnLoad.cpp
apps/mobile/src/: WalletNavigator.tsx
apps/mobile/src/features/Dashboard/: Dashboard.stories.tsx  Dashboard.tsx  DashboardNavigator.tsx  EpochProgress.tsx  NotDelegatedInfo.tsx  StakePoolInfo.tsx  StakePoolInfos.stories.tsx  StakePoolInfos.tsx  UserSummary.tsx
apps/mobile/src/features/DevMenu/: DevMenu.tsx  index.ts
apps/mobile/src/features/Discover/: BrowserNavigator.tsx  DiscoverNavigator.tsx  useDappConnectorManager.tsx
apps/mobile/src/features/Initialization/: AgreementChangedNavigator.tsx  InitializationNavigator.tsx
apps/mobile/src/hooks/: useApiErrorResolver.tsx  useAppState.ts  useBackgroundTimer.ts  useBold.tsx  usePromise.ts  useShowCollateralNotFoundAlert.tsx  useTranslatedError.ts
apps/mobile/src/kernel/: constants.ts  dialogs.ts  features.ts  runtime.test.ts  runtime.ts  shims.ts  shims.web.ts  utils.ts
apps/mobile/src/types/: emurgo__dullahan.d.ts  images.d.ts
apps/mobile/src/ui/: BulletPointItem.tsx  NumericKeyboard.tsx
apps/wallet-mobile/: .eslintrc.js  ampli.json  app.config.js  app.json  package.json
apps/wallet-mobile/.storybook/: storybook.requires.js
apps/wallet-mobile/__mocks__/: expo-linear-gradient.js
apps/wallet-mobile/android/: build.gradle
apps/wallet-mobile/android/app/: build.gradle  google-services.json
apps/wallet-mobile/fastlane/: Appfile  Matchfile
apps/wallet-mobile/ios/: GoogleService-Info-Nightly.plist  GoogleService-Info-Production.plist  Podfile  nightly.entitlements  nightly.plist
apps/wallet-mobile/ios/yoroi/: AppDelegate.mm  GoogleService-Info.plist  Info.plist  yoroi.entitlements
apps/wallet-mobile/ios/yoroi.xcodeproj/: project.pbxproj
apps/wallet-mobile/ios/yoroiTests/: Info.plist
apps/wallet-mobile/scripts/: request-ada-android.sh  request-ada-ios.sh  request-ada-simple-test.sh
apps/wallet-mobile/src/: AppNavigator.tsx  WalletNavigator.tsx  YoroiApp.tsx
apps/wallet-mobile/src/components/: CopyButton.tsx  DismissableView.tsx  Outline.tsx
apps/wallet-mobile/src/hooks/: useShowCollateralNotFoundAlert.tsx
apps/wallet-mobile/src/kernel/: constants.ts  features.ts  navigation.tsx
scripts/: install-dev-pkg.sh  install-pkgs.sh
(+1557 files in other folders)
